--- a/css/main.css
+++ b/css/main.css
@@ -1,111 +1,125 @@
 body {
   background-image: url("../resource/fon.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 110vw auto;
 }
-
-
-
-/*Начало кнопки, хз, возможно эти строчки вообще не нужны */
-onclick {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@media screen and (max-width: 1500px) {
+  body {
+    background-size: auto 100vh;
+  }
 }
-
-button {
+@media screen and (max-height: 720px) {
+  body {
+    background-size: 110vw auto !important;
+  }
+}
+.but {
   min-width: 300px;
   min-height: 60px;
   font-family: 'Nunito', sans-serif;
-  font-size: 22px;
+  font-size: calc(1vw+5px);
   text-transform: uppercase;
   letter-spacing: 1.3px;
   font-weight: 700;
   color: #313133;
   background: #4FD1C5;
-background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+  background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
   border: none;
   border-radius: 1000px;
-  box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+  box-shadow: 12px 12px 24px rgba(79, 209, 197, 0.64);
   transition: all 0.3s ease-in-out 0s;
   cursor: pointer;
   outline: none;
   position: relative;
   padding: 10px;
-  };
-
-  button::before {
-    content: '';
-      border-radius: 1000px;
-      min-width: calc(300px + 12px);
-      min-height: calc(60px + 12px);
-      border: 6px solid #00FFCB;
-      box-shadow: 0 0 60px rgba(0,255,203,.64);
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      transition: all .3s ease-in-out 0s;
-    }
-
-    .button:hover, .button:focus {
-      color: #313133;
-      transform: translateY(-6px);
-    }
-
-
-    button:hover::before, button:focus::before {
-      opacity: 1;
-    }
-    
-    button::after {
-      content: '';
-      width: 30px; height: 30px;
-      border-radius: 100%;
-      border: 6px solid #00FFCB;
-      position: absolute;
-      z-index: -1;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      animation: ring 1.5s infinite;
-    }
-    
-    button:hover::after, button:focus::after {
-      animation: none;
-      display: none;
-    }
-    
-    @keyframes ring {
-      0% {
-        width: 30px;
-        height: 30px;
-        opacity: 1;
-      }
-      100% {
-        width: 300px;
-        height: 300px;
-        opacity: 0;
-      }
-    }
-/* конец кнопки*/
-
+  left: 50%;
+  transform: translate(-50%, 0%);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.but::before {
+  content: '';
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid #00FFCB;
+  box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+.but:hover,
+.but:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+.but:hover::before,
+.but:focus::before {
+  opacity: 1;
+}
+.but::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid #00FFCB;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
 #baltika {
   content: url("../resource/baltika.png");
   position: absolute;
-  height: 350px;
-  left: 0%;
+  height: 120px;
   z-index: -1;
-  -webkit-animation: fly_baltika 10s linear infinite;
+  -webkit-animation: rotate_baltika 12s linear infinite;
 }
-@-webkit-keyframes fly_baltika {
+#bochka {
+  content: url('../resource/planet.png');
+  height: 250px;
+  display: block;
+  margin-left: auto;
+  z-index: -1;
+  -webkit-animation: fly_bocka 40s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 45%;
+}
+#bochka::after {
+  content: 'catalog';
+}
+@keyframes fly_bocka {
   0% {
-    left: 0%;
+    transform: rotate(0deg);
   }
   100% {
-    left: 100%;
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate_baltika {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 #hidden-menu {
